# SwigSmartPtrs

./: CMakeLists.txt  Entity.hpp  Watchable.cpp  Watchable.hpp  main.cpp  module.i  watch_ptr.cpp  watch_ptr.hpp
